# Diet-memory

./: .gitignore  CMakeLists.txt  Main.qml  README.md  build.sh  main.cpp  resources.qrc
components/: AddMealDialog.qml  CalendarView.qml  Card.qml  MealCard.qml  MealListView.qml  MealSection.qml  StatsView.qml
database/: mealdatabase.cpp  mealdatabase.h
images/: README.md
models/: mealmodel.cpp  mealmodel.h
